@@ -1,5 +1,5 @@
 EXTRA_DIST = acargp.m4 acbuiltinapply.m4 acexesuffix.m4 acffi.m4 acfind.m4 \
 	acguilibs.m4 achdf5.m4 acinline.m4 acinstall.m4 acjdk.m4 \
-	aclinkflags.m4 acnextstep.m4 acobjclibs.m4 acobjcmalloc.m4 acpng.m4 \
-	acpointerfmt.m4 acreplacefuncs.m4 acsizes.m4 acswarm.m4 actcltk.m4 \
-	acwarnflags.m4 acxpm.m4
+	aclinkflags.m4 acnextstep.m4 acobjclibs.m4 acobjcmalloc.m4 \
+	acpath.m4 acpng.m4 acpointerfmt.m4 acreplacefuncs.m4 \
+	acsizes.m4 acswarm.m4 actcltk.m4 acwarnflags.m4 acxpm.m4
