@@ -1,8 +1,13 @@
 1999-05-03  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
 
+	* acpath.m4 (md_CHECK_PATH_SYNTAX): New macro.
+
+	* Makefile.am (EXTRA_DIST): Add acpath.m4.
+
 	* acjdk.m4 (vj_FIND_JDK): New substitution jdkdosdir.
 	Set JAVACLASSES to use jdkdosdir and backslashes in cygwin case,
 	and jdkdir and slashes, otherwise.
+	Use jdkdosdir for JAVA_HOME setting in JAVAENV for jdk.
 
 1999-04-30  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
 
